--- a/lang/ko.json
+++ b/lang/ko.json
@@ -5,6 +5,7 @@
     "passwordGenerator": "비밀번호 생성기",
     "pdfConverter": "PDF 변환기",
     "fileConverter": "파일 변환 가이드",
+    "imageConverter": "이미지 변환기",
     "languageKo": "🇰🇷 KO",
     "languageEn": "🇺🇸 EN"
   },
@@ -21,9 +22,17 @@
         "title": "🔐 비밀번호 생성기",
         "description": "안전하고 강력한 비밀번호를 생성하세요. 길이, 문자 유형을 설정할 수 있으며, 생성된 비밀번호의 보안 강도를 실시간으로 확인할 수 있습니다."
       },
-      "pdfConverter": {
-        "title": "📄 PDF 변환기",
+      "pdfToPng": {
+        "title": "📄 PDF to PNG 변환기",
         "description": "PDF 파일을 고품질 PNG 이미지로 변환하세요. 브라우저에서 직접 처리되어 안전하며, 다양한 품질 옵션을 제공합니다."
+      },
+      "pdfToHwp": {
+        "title": "📑 PDF to HWP 변환기",
+        "description": "PDF 파일을 HWP 파일로 변환하는 방법을 안내합니다."
+      },
+      "webpToJpg": {
+        "title": "🖼️ WEBP to JPG 변환기",
+        "description": "WEBP 이미지를 JPG 형식으로 변환합니다. 브라우저에서 안전하게 처리됩니다."
       },
       "fileConverter": {
         "title": "📁 파일 변환 가이드",
