--- a/lang/ko.json
+++ b/lang/ko.json
@@ -154,14 +154,14 @@
       }
     }
   },
-  "pdfToHwp": {
-    "title": "PDF to HWP 변환기",
-    "description": "PDF 파일을 HWP 파일로 변환하는 방법을 안내합니다",
-    "keywords": "PDF HWP 변환, PDF HWP 변환, 온라인 PDF 변환기",
-    "mainTitle": "📑 PDF to HWP 변환기",
-    "subtitle": "PDF 파일을 한글(HWP) 파일로 변환하는 방법을 안내합니다",
+  "hwpToPdf": {
+    "title": "HWP to PDF 변환기",
+    "description": "한글(HWP) 파일을 PDF 파일로 변환하세요",
+    "keywords": "HWP PDF 변환, HWP PDF 변환, 온라인 HWP 변환기",
+    "mainTitle": "📑 HWP to PDF 변환기",
+    "subtitle": "한글(HWP) 파일을 PDF 파일로 변환하세요.",
     "warningTitle": "⚠️ 주의사항",
-    "warningText": "PDF to HWP 변환은 완벽하지 않을 수 있습니다. 레이아웃이나 서식이 변경될 수 있으니 변환 후 확인하세요.",
+    "warningText": "HWP to PDF 변환은 완벽하지 않을 수 있습니다. 레이아웃이나 서식이 변경될 수 있으니 변환 후 확인하세요.",
     "methodsTitle": "🔧 변환 방법",
     "onlineMethod": "온라인 변환 도구",
     "offlineMethod": "오프라인 변환 도구",
@@ -175,10 +175,10 @@
     ],
     "steps": "📋 변환 단계",
     "stepsList": [
-      "PDF 파일 준비",
+      "HWP 파일 준비",
       "변환 도구 선택",
       "파일 업로드",
-      "HWP 형식으로 변환",
+      "PDF 형식으로 변환",
       "결과 파일 다운로드"
     ]
   },
