feat: PDF 및 HWP 변환기 UI 개선 및 보안 주의사항 추가

--- a/lang/en.json
+++ b/lang/en.json
@@ -120,12 +120,10 @@
   },
   "pdfConverter": {
     "title": "PDF to PNG Converter",
-    "description": "Convert PDF files to high-quality PNG images",
-    "keywords": "PDF to PNG converter, PDF image conversion, online PDF converter",
-    "bannerTitle": "🎯 Document Conversion Tool",
-    "bannerSubtitle": "Convert PDF files to high-quality PNG images",
-    "mainTitle": "📄 PDF to PNG Converter",
-    "uploadText": "📄 Drag and drop your PDF file here or click to upload",
+    "mainTitle": "🖼️ PDF to PNG Converter",
+    "cardTitle": "PDF → PNG Conversion",
+    "cardDesc": "Convert PDF files to high-quality PNG images. Supports multi-page conversion at once.",
+    "uploadText": "📄 Drag or click here to upload your PDF file",
     "chooseFile": "Choose File",
     "imageQuality": "Image Quality:",
     "qualityStandard": "Standard (1x)",
