--- a/lang/ko.json
+++ b/lang/ko.json
@@ -120,11 +120,9 @@
   },
   "pdfConverter": {
     "title": "PDF to PNG 변환기",
-    "description": "PDF 파일을 고품질 PNG 이미지로 변환하세요",
-    "keywords": "PDF PNG 변환, PDF 이미지 변환, 온라인 PDF 변환기",
-    "bannerTitle": "🎯 문서 변환 도구",
-    "bannerSubtitle": "PDF를 고품질 PNG 이미지로 변환하세요",
-    "mainTitle": "📄 PDF to PNG 변환기",
+    "mainTitle": "🖼️ PDF to PNG 변환기",
+    "cardTitle": "PDF → PNG 변환",
+    "cardDesc": "PDF 파일을 고품질 PNG 이미지로 변환합니다. 여러 페이지도 한 번에 변환할 수 있습니다.",
     "uploadText": "📄 PDF 파일을 여기에 드래그하거나 클릭하여 업로드하세요",
     "chooseFile": "파일 선택",
     "imageQuality": "이미지 품질:",
